# Triad369-Launchpad

./: LICENSE  README.md  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/: spec_fastapi.toml  spec_python_cli.toml  spec_react_vite.toml  webhook_payload.json
launchpad/: audit.py  cli.py  coevo_client.py  nevora_bridge.py  packager.py  snapshot.py  specs.py  utils.py
launchpad/apps/: __init__.py  detect.py  doctor.py  pack.py  publish.py  registry.py  runner.py  runtime.py
launchpad/bridge/: __init__.py  contracts.py
scripts/: demo_windows.bat  smoke_checks.py
tests/: test_capsule.py  test_detect.py  test_pack.py  test_registry.py  test_runner.py  test_runtime.py  test_snapshot.py
