[project]
name = "triad369-launchpad"
version = "0.1.0"
description = "Spec → Generate → Ship. Bridges Nevora and CoEvo into a 3-6-9 pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="MichaelWave369", email=""}]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.scripts]
triad369 = "launchpad.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP"]
