[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triad369-launchpad"
version = "0.1.0"
description = "Spec → Generate → Ship. Bridges Nevora and CoEvo into a 3-6-9 pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name="MichaelWave369"}]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[tool.setuptools.packages.find]
include = ["launchpad*"]

[project.optional-dependencies]
streamlit = [
  "streamlit>=1.32",
  "pillow>=10.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
triad369 = "launchpad.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP"]
